menu principal y agregado de imagen

--- a/src/main/webapp/resources/core/css/main.css
+++ b/src/main/webapp/resources/core/css/main.css
@@ -17,3 +17,10 @@ h2{
 .navbar-brand{
     margin:0 2rem;
 }
+.verde-fondo {
+    background-color: green !important;
+}
+
+.blanco-texto {
+    color: white !important;
+}
