--- a/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
@@ -26,10 +26,11 @@
     <div class="row">
         <div class="col-md-6">
 
-            <img src="" class="img-fluid" alt="Imagen de Inicio">
 
+            <img th:src="@{/img/inicio_imagen.jpg}" class="img-fluid" alt="Imagen de Inicio">
 
         </div>
+
         <div class="col-md-6">
 
             <h1 class="mb-4">Bienvenido a [Nombre de la Aplicación]</h1>
