arreglo de icono y texto de inicio

--- a/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
@@ -14,8 +14,8 @@
 
 <!-- Barra de Navegación (opcional) -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">[Nombre de la Aplicación]</a>
-
+    <img th:src="@{/img/logo1.png}" alt="Logo de FatLoss" height="60" class="d-inline-block align-top">
+    <h1 class="text-black">FatLoss</h1>
     <div class="ms-auto d-flex">
         <a class="navbar-brand me-3" href="#">Iniciar Sesión</a>
         <a class="navbar-brand" th:href="@{/irAFormulario}">Registrarse</a>
@@ -33,7 +33,7 @@
 
         <div class="col-md-6">
 
-            <h1 class="mb-4">Bienvenido a [Nombre de la Aplicación]</h1>
+            <h1 class="mb-4 text-black">Bienvenido a FatLoss</h1>
 
             <ul>
                 <li>Personalización de planes de dieta</li>
