--- a/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
@@ -50,7 +50,7 @@
             <div class="list-group flex-row">
                 <a th:href="@{/alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
                 <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
-                <a th:href="@{/actividades_fisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
             </div>
         </div>
     </div>
