--- a/src/main/webapp/resources/core/css/main.css
+++ b/src/main/webapp/resources/core/css/main.css
@@ -24,3 +24,147 @@ h2{
 .blanco-texto {
     color: white !important;
 }
+
+/* Vista actividadesFisicas */
+
+
+.listaEjercicios {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+}
+.listaEjercicios > div {
+    width: 30%;
+    margin: 10px;
+    padding: 15px;
+    border: 2px solid #ddd;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.listaEjercicios h2 {
+    color: #333;
+    font-size: 18px;
+    margin-top: 10px;
+}
+.listaEjercicios p {
+    color: #666;
+    font-size: 14px;
+    margin: 5px 0;
+}
+.listaEjercicios a {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+
+.listaEjercicios a:hover {
+    color: green !important;
+}
+.bloqueBusqueda{
+    padding: 1rem;
+    margin: 2rem;
+    display: flex;
+    flex-direction:row;
+    justify-content: space-around;
+}
+.busqueda{
+    display: flex;
+    justify-content: space-around;
+    width: 30rem;
+
+}
+.busqueda label{
+font-size:1.5rem ;
+    margin: 0.5rem;
+}
+.busqueda label {
+    font-size: 1.5rem;
+    margin: 0.5rem;
+}
+
+.busqueda input {
+    flex: 1;
+    margin-right: 0.5rem;
+}
+
+.busqueda button {
+    width: auto;
+    margin: 0.5rem 0;
+}
+.advise {
+
+    margin-right: 20px;
+    background-color: #f0f0f0;
+    padding: 20px;
+    width: 30em;
+    height: auto;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.advise img {
+    width: 5em;
+    height: auto;
+    margin-right: 20px;
+}
+
+
+.exercise-form {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.exercise-form label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.exercise-form input[type="text"] {
+    width: calc(100% - 110px);
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.exercise-form button {
+    width: 100px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #28a745;
+    color: #fff;
+    cursor: pointer;
+}
+
+.exercise-form button:hover {
+    background-color: #218838;
+}
+
+/*Ejercicio*/
+
+.formulario_actividad {
+  align-content: center;
+    background-color: #f8f9fa;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 400px;
+    margin: 0 auto;
+}
+.titulos_ejercicio {
+   font-size: 1.6rem;
+    text-align: center;
+    color: black;
+}
+
+/*diarioEjercicio*/
+
