update-text-footer

--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
@@ -90,8 +90,7 @@
     </nav>
 
     <!--perfil-->
-    <div class="container my-5">
-        <h2 class="text-center text-dark">Mi Perfil</h2>
+    <div class="container my-5"> 
         <div class="row d-flex align-items-center ">
             <div class="col-sm-3 d-flex flex-column justify-content-center my-3">
                 <h3 class="text-center text-dark">Mi Foto</h3>
@@ -99,6 +98,7 @@
                 <a class="btn btn-outline-success" th:href="@{#}">Cambiar Foto</a>
             </div>
             <div class="col-sm-9">
+                <h2 class="text-center text-dark">Mi Perfil</h2>
                 <div class="card px-3" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
                     <div class="card-body ">
                         <h4 class="card-title" th:text="${usuario}"></h4>
@@ -120,14 +120,14 @@
     <!--footer-->
     <footer class="container-fluid mt-auto py-2">
         <div class="row d-flex align-items-center">
-            <div class="col-sm-3 d-flex justify-content-center justify-content-sm-end justify-content-md-end
+            <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
             justify-content-lg-end justify-content-xl-end justify-content-xxl-end py-2">
                 <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="80px">
             </div>
-            <div class="col-sm-4 d-flex flex-column justify-content-star">
-                <h3>TP Taller Web I: fatloss</h3>
-                <p><img th:src="@{/img/github.png}" alt="logo-github"> Github:  <a href="https://github.com/GonzaloFlores1121/grupo4" target="_blank">https://github.com/GonzaloFlores1121/grupo4</a></p>
-                <p><img th:src="@{/img/trello.png}" alt="logo-trello"> Trello:  <a href="https://trello.com/w/grupo4tallerweb" target="_blank">https://trello.com/w/grupo4tallerweb</a></p>
+            <div class="col-sm-5 d-flex flex-column justify-content-star">
+                <h4>TP Taller Web I: fatloss</h4>
+                <p><img th:src="@{/img/github.png}" alt="logo-github"> Github:  <a class="text-break" href="https://github.com/GonzaloFlores1121/grupo4" target="_blank">https://github.com/GonzaloFlores1121/grupo4</a></p>
+                <p><img th:src="@{/img/trello.png}" alt="logo-trello"> Trello:  <a class="text-break" href="https://trello.com/w/grupo4tallerweb" target="_blank">https://trello.com/w/grupo4tallerweb</a></p>
             </div>
             <div class="col-sm-5 d-flex flex-column justify-content-star">
                 <h5>Integrantes: </h5>
