--- a/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
@@ -63,7 +63,7 @@
         <div class="seccion-receta">
             <img th:src="@{/img/receta1.jpg}" alt="receta">
             <div class="div-textos-receta">
-                <p class="titulo-receta">Pan proteico</p>
+                <p  th:src="@{/img/receta1.jpg}" class="titulo-receta">Pan proteico</p>
                 <p>Una receta facil y rapida</p>
             </div>
         </div>
