--- a/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
@@ -33,6 +33,7 @@
                 </li>
                 <li class="nav-item">
                     <a th:href="@{/ingresarPeso}" class="nav-link" >Mi peso X kg</a>
+                    
                 </li>
                 <li class="nav-item">
                     <a th:href="@{/inicio}" class="nav-link">Salir</a>
@@ -51,6 +52,7 @@
                 <a th:href="@{/alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
                 <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
                 <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                 <a th:text="${ingestaCalorica}" class="list-group-item list-group-item-action">EN FORMA</a>
             </div>
         </div>
     </div>
