--- a/src/main/webapp/resources/core/css/main.css
+++ b/src/main/webapp/resources/core/css/main.css
@@ -2,9 +2,16 @@
   padding: 3rem 1.5rem;
   text-align: center;
 }
+
 body {
+    /*footer*/
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    /*fin*/
     font-family: "Lato", sans-serif;
 }
+
 h1{
 	color:#0000FF;
 }
@@ -37,6 +44,7 @@ h1,h2, h3, h4, h5, h6, .nav-link {
 h1, footer {
     color: #ffffff;
 }
+
 .verde-fondo {
     background-color: green !important;
 }
