Aparicion de informacion nutricional - terminacion de vista miDiario

--- a/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
@@ -16,7 +16,7 @@
     <h1 class="text-black">FatLoss</h1>
     <div class="ms-auto d-flex">
         <a class="navbar-brand me-3" href="#">Iniciar Sesión</a>
-        <a class="navbar-brand" th:href="@{/irAFormulario}">Registrarse</a>
+        <a class="navbar-brand" th:href="@{/formulario-registro}">Registrarse</a>
     </div>
 </nav>
 
@@ -42,7 +42,7 @@
 
             <p>Comienza tu viaje hacia una vida más saludable hoy mismo. ¡Regístrate ahora!</p>
 
-            <a th:href="@{/irAFormulario}" class="btn btn-primary">Registrarse</a>
+            <a th:href="@{/formulario-registro}" class="btn btn-primary">Registrarse</a>
 
 
 
