--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
@@ -12,7 +12,7 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
             <h2 class="mt-4">Detalles Personales</h2>
-        <form th:action="@{/enviarFormulario}" method="post" th:object="${datosLogin}">
+        <form th:action="@{/enviarFormulario}" method="post" th:object="${usuario}">
             <div class="form-group">
                 <label>Email:</label>
                 <input type="email" class="form-control" th:field="*{email}" required>
@@ -24,11 +24,11 @@
             <div class="form-group">
                 <label>Sexo:</label><br>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="femenino" th:field="*{sexo}" value="femenino">
+                    <input class="form-check-input" type="radio" id="femenino" th:field="*{genero}" value="femenino">
                     <label class="form-check-label" for="femenino">Femenino</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="masculino" th:field="*{sexo}" value="masculino">
+                    <input class="form-check-input" type="radio" id="masculino" th:field="*{genero}" value="masculino">
                     <label class="form-check-label" for="masculino">Masculino</label>
                 </div>
             </div>
@@ -55,7 +55,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
             <button type="button" class="btn btn-secondary" th:onclick="|window.location.href='@{/inicio}'|">Cancelar</button>
-            <div th:if="${error}" style="color: red;">Error: <span th:text="${error}"></span></div>
+           <p th:if="${error != null}" class="alert alert-danger m-3" th:text="'Error ' + ${error}"></p>
         </form>
         </div>
     </div>
