--- a/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
@@ -69,7 +69,7 @@
                 <!-- Primera fila -->
                 <div class="row mb-3">
                     <div class="col-md-12 text-center">
-                        <a th:href="@{/midiario/alimentos}">
+                        <a th:href="@{/miDiario}">
                         <i class="fa-solid fa-utensils fa-5x"></i>
                         <p>kcal</p>
                         </a>
