--- a/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
@@ -61,28 +61,28 @@
 
     <div class="contenedor-recetas">
         <div class="seccion-receta">
-            <img th:src="@{/img/receta1.jpg}" alt="receta">
+            <img th:src="@{/img/receta-quinoa.jpg}" alt="receta" width="100x" height="50px">
             <div class="div-textos-receta">
-                <p  th:src="@{/img/receta1.jpg}" class="titulo-receta">Pan proteico</p>
+                <a  th:src="@{/descripcionRecetas}" class="titulo-receta">Ensalada de quinoa con vegetales asados</a>
                 <p>Una receta facil y rapida</p>
             </div>
         </div>
         <div class="seccion-receta">
-            <img th:src="@{/img/receta2.jpg}" alt="receta">
+            <img th:src="@{/img/receta2.jpg}" alt="receta" width="100px" height="100px">
             <div class="div-textos-receta">
                 <p class="titulo-receta">Trufas de banana y chocolate</p>
                 <p>bajo en carbohidratos y deliciosa</p>
             </div>
         </div>
         <div class="seccion-receta">
-            <img th:src="@{/img/receta3.jpg}" alt="receta">
+            <img th:src="@{/img/receta3.jpg}" alt="receta" width="100px" height="100px">
             <div class="div-textos-receta">
                 <p class="titulo-receta">Ensalada con huevo</p>
                 <p>Una receta sana y facil de hacer</p>
             </div>
         </div>
         <div class="seccion-receta">
-            <img th:src="@{/img/receta4.jpg}" alt="receta">
+            <img th:src="@{/img/receta4.jpg}" alt="receta" width="100px" height="100px">
             <div class="div-textos-receta">
                 <p class="titulo-receta">Arroz con pollo</p>
                 <p>Perfecto para subir volumen</p>
