--- a/src/main/webapp/resources/core/css/main.css
+++ b/src/main/webapp/resources/core/css/main.css
@@ -195,22 +195,86 @@ font-size:1.5rem ;
 }
 /*recetas*/
 
+.contenedor-busqueda {
+    margin-top: 20px;
+    text-align: center;
+    background-color: #f2f2f2;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.buscar-receta {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #333;
+}
+
+.busqueda-alimento {
+    width: 70%;
+    padding: 8px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.contenedor-busqueda button {
+    margin-top: 10px;
+    padding: 8px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.contenedor-busqueda button:hover {
+    background-color: #0056b3;
+}
+
 .div-parrafos-receta{
     display: flex;
     flex-direction: column;
-    aling-items: center;
-    pading: 1rem;
+    padding: 1rem;
+}
+
+.seccion-receta {
+    width: 250px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.seccion-receta img {
+    width: 100%;
+    border: 2px solid #4caf50;
+    border-radius: 5px;
+}
+
+.titulo-receta {
+    font-weight: bold;
+    color: #007bff;
+}
+
+.contenedor-descripcion-recetas {
+    border: 4px solid #4caf50;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.div-textos-receta {
+    margin-left: 10px;
 }
 
 .contenedor-busqueda{
-    margin-rigth: 8rem;
+    margin-right: 8rem;
 }
 
 .contenedor-principal-receta{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    aling-items: center;
+    align-items: center;
     padding: 3rem;
 }
 
@@ -237,7 +301,6 @@ font-size:1.5rem ;
     display: flex;
     flex-direction: column;
 }
-
 
 /*diarioEjercicio*/
 
@@ -297,4 +360,23 @@ font-size:1.5rem ;
 .alimentoTitulo{
     font-size: 1.2rem;
     font-weight: bold;
+}
+
+/*
+descripcion recetas
+*/
+
+.row-receta{
+    display: flex;
+    flex-direction: row;
+    align-content: space-between
+}
+
+.container-rec {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
